tests/errors/regex-empty-count/main.pa
# An empty `{}` repetition count in a regular expression.
def main = `a{}`
